<resources>
	<string name="app_name">TGF</string>
	<string name="create_your_account_to_get_started">Create your account to get started.</string>
	<string name="continue_">CONTINUE</string>
	<string name="continue_insurance_quote_form">Continue Insurance Quote form?</string>
	<string name="could_not_load_form">Could not load Form</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="default_email">test@liferay.com</string>
	<string name="default_password">test</string>
	<string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password.</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="form_button">Form</string>
	<string name="get_insurance_quote">GET INSURANCE QUOTE</string>
	<string name="insurance_quote">Insurance Quote</string>
	<string name="insurances">Insurances</string>
	<string name="home">Home</string>
	<string name="loading_form">Loading Form....</string>
	<string name="login">Login</string>
	<string name="login_failed">Login Failed</string>
	<string name="my_policies">My Policies</string>
	<string name="not_now">NOT NOW</string>
	<string name="password">Password</string>
	<string name="request_completed">Request Completed</string>
	<string name="request_failed">Request Failed</string>
	<string name="special_offers">Special Offers</string>
	<string name="sign_out">Sign Out</string>
	<string name="take_care_of_your_car">Take Care of Your Car</string>
	<string name="uppercase_signup">SIGN UP</string>
	<string name="uppercase_login">LOGIN</string>
	<string name="we_have_coverage_options_to_protect_your_car_against_just_about_anything">We have coverage options to protect your car against just about anything.</string>
	<string name="your_login">Your Login</string>
	<string name="your_next_car_insurance">Your next car insurance.</string>
	<string name="your_password">Your Password</string>
	<string name="you_started_a_form_at_our_website">You started a form at our website.</string>
	<string name="your_information_was_successfully_sent">Your information was successfully sent.</string>
	<string name="insurance_blog">Insurance Blog</string>
	<string name="sorry_workflow_is_not_read_yet">Sorry. Workflow Screenlet is not read yet.</string>
	<string name="workflow">Workflow</string>
</resources>
