<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/custom_dialog"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/dialog_side_padding"
	android:paddingRight="@dimen/dialog_side_padding"
	android:paddingTop="@dimen/dialog_top_padding"
	>

	<ImageView
		android:id="@+id/dialog_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/icon"
		/>

	<TextView
		android:id="@+id/dialog_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dialog_title_margin_top"
		android:text="@string/continue_insurance_quote_form"
		android:textSize="@dimen/dialog_title_text_size"
		style="@style/lexicon_text_view"
		/>

	<TextView
		android:id="@+id/dialog_message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dialog_subtitle_margin_top"
		android:text="@string/you_started_a_form_at_our_website"
		android:textSize="@dimen/dialog_subtitle_text_size"
		android:textStyle="normal"
		style="@style/lexicon_text_view"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="@dimen/dialog_button_margin_top"
		android:gravity="end"
		android:orientation="horizontal"
		>

		<Button
			android:id="@+id/dialog_negative_button"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/field_min_height"
			android:layout_marginEnd="@dimen/dialog_button_margin"
			android:background="@drawable/negative_dialog_button_selector"
			android:paddingEnd="@dimen/dialog_button_size_padding"
			android:paddingStart="@dimen/dialog_button_size_padding"
			android:text="@string/not_now"
			android:textColor="@color/colorPrimaryLight_lexicon"
			android:textSize="@dimen/dialog_button_text_size"
			android:textStyle="normal"
			style="@style/lexicon_dialog_button"

			/>

		<Button
			android:id="@+id/dialog_positive_button"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/field_min_height"
			android:elevation="0dp"
			android:gravity="center"
			android:paddingEnd="@dimen/dialog_button_size_padding"
			android:paddingStart="@dimen/dialog_button_size_padding"
			android:text="@string/continue_"
			android:textSize="@dimen/dialog_button_text_size"
			style="@style/lexicon_button"
			/>

	</LinearLayout>

</LinearLayout>