<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:theme="@style/lexicon_theme"
	tools:context="mobile.liferay.com.formsscreenletdemo.HomeActivity"
	>

	<ImageView
		android:id="@+id/home_banner"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:adjustViewBounds="true"
		android:scaleType="centerCrop"
		android:src="@drawable/banner"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom"
		android:orientation="vertical"
		>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/home_title_margin_bottom"
			android:layout_marginLeft="@dimen/home_title_margin_horizontal"
			android:layout_marginRight="@dimen/home_title_margin_horizontal"
			android:gravity="center_horizontal"
			android:text="@string/your_next_car_insurance"
			android:textColor="@color/white"
			android:textSize="@dimen/home_title_text_size"
			android:textStyle="bold"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/home_subtitle_margin_bottom"
			android:layout_marginLeft="@dimen/home_title_margin_horizontal"
			android:layout_marginRight="@dimen/home_title_margin_horizontal"
			android:gravity="center_horizontal"
			android:lineSpacingExtra="@dimen/home_text_margin_line_space_extra"
			android:text="@string/we_have_coverage_options_to_protect_your_car_against_just_about_anything"
			android:textColor="@color/white"
			android:textSize="@dimen/home_subtitle_text_size"
			android:textStyle="normal"
			/>

		<Button
			android:id="@+id/forms_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/home_button_margin_bottom"
			android:layout_marginLeft="@dimen/home_title_margin_horizontal"
			android:layout_marginRight="@dimen/home_title_margin_horizontal"
			android:text="@string/get_insurance_quote"
			/>

	</LinearLayout>

</FrameLayout>